Añadidos archivos de configuración al gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # Logs
 *.log
+**/package-lock.json
+
+# Database configuration
+server/config/dbConfig.js
+server/db.js
+database
 
 # Dependency directory
 node_modules/
