--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,9 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-map-interaction": "^2.1.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "react-zoom-pan-pinch": "^3.3.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
