--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "start:dev": "set DEBUG=* & set NODE_ENV=development & node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
