--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.7",
     "@ramonak/react-progress-bar": "^5.2.0",
+    "antd": "^5.15.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
