--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.12",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2"
