--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@ramonak/react-progress-bar": "^5.2.0",
     "antd": "^5.15.1",
     "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
