--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.12",
     "pg": "^8.11.3",
