--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,9 @@
     "@uidotdev/usehooks": "^2.4.1",
     "antd": "^5.15.1",
     "axios": "^1.6.7",
+    "core-js": "^3.37.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
