--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "start:dev": "set DEBUG=* & set NODE_ENV=development & node ./bin/www"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.42.5",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -16,6 +17,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.12",
     "pg": "^8.11.3",
