--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,21 +2,12 @@
   "version": 2,
   "routes": [
     {
-      "handle": "vercel",
-      "src": "/(.*)"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-        },
-        { "key": "Access-Control-Allow-Headers", "value": "*" }
-      ]
+      "src": "/(.*)",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
+        "Access-Control-Allow-Headers": "*"
+      }
     }
   ]
 }
