--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "echo 'No se necesita construcción para este proyecto'",
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "start:dev": "set DEBUG=* & set NODE_ENV=development & node index.js"
   },
   "dependencies": {
@@ -23,8 +23,5 @@
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
   }
 }
